--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@ body {
   transform: scale(1.1);
 }
 
+.operator {
+  background-color: rgb(204, 241, 189);
+}
+
 .btn:active {
   transform: scale(0.9);
   transition-timing-function: cubic-bezier(0.3, 2.885, 0.32, 1.275);
